ECL 0.9i
========

* Visible changes:

 - Many functions have got now the prefix "ecl_" so as to avoid namespace
   collisions with C/C++ code.

 - Several functions with duplicate functionality (make_two_way_streams,
   make_string_output_stream_from_string, close_stream, etc) have been removed.

 - A new global variable EXT:*ACTION-ON-UNDEFINED-VARIABLE* controls whether
   the interpreter complains when you try to assign a value to a symbol that
   has not been defined as variable. An example

	> (SETQ S 1)	; No complain
	1
	> (SETQ EXT:*ACTION-ON-UNDEFINED-VARIABLE* 'ERROR)
	ERROR
	> (SETQ X 1)	; Ooops, X had not been defined before!
	Undefined variable referenced in interpreted code.
	Name: X
	>> :q
	> (DEFVAR X 1)
	X
	> (SETQ X 1)
	1

 - Adding a new method to a generic function does no longer result in a warning
   when the function belongs to a locked package.

 - Trying to change the function definition of a symbol in a locked package
   results in a correctable error.

 - All filesystem operations (opening files, checking directories, etc), now
   merge the pathname not only with *default-pathname-defaults*, but also with
   the output of SI:GETCWD. This way we ensure that all filenames are absolute
   pathnames. [1]

 - *LOAD-PATHNAME* contains the pathname as passed to LOAD, merged with
   *DEFAULT-PATHNAME-DEFAULTS* but not with SI:GETCWD. In other words, according
   to ANSI, it does not get the pathname as seen by the operating system.

* Errors fixed:

 - The intermediate output of the compiler is written in the directory in which
   the output will reside. [1]

 - ENSURE-GENERIC-FUNCTION relies on ENSURE-GENERIC-FUNCTION-USING-CLASS for
   doing the real work of (re)defining generic functions. This means E-G-F now
   handles :METHOD-CLASS and :GENERIC-FUNCTION-CLASS properly.

* Notes:

 [1] Both bugs are related.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***